@@ -111,6 +111,10 @@ protected:
    // error
    TH1F* m_h_TT_emerror;
    TH1F* m_h_TT_haderror;
+   TH2F* m_h_TT_em_GLinkDown;
+   TH2F* m_h_TT_em_GLinkTimeout;
+   TH2F* m_h_TT_had_GLinkDown;
+   TH2F* m_h_TT_had_GLinkTimeout;
 
    // number of triggered slice
    TH1F* m_h_TT_triggeredSlice_em;
